src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Assigned_To_is_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_s_Manager__c</fullName>
        <formula>Owner:User.Manager.CommunityNickname</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Dial_Number__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Hour__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Lead_Status__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_Ring_Time__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Time_Zone__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_Date_Time__c</fullName>
        <description>Replica of InsideSales field</description>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Connect__c</fullName>
        <description>FrontSpin counts calls as &quot;connects&quot; when they are 1 minutes or longer</description>
        <formula>CallDurationInSeconds &gt;= 60</formula>
        <inlineHelpText>FrontSpin counts calls as &quot;connects&quot; when they are 1 minutes or longer</inlineHelpText>
        <label>Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Day_of_Week__c</fullName>
        <formula>CASE(
  TEXT(MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )),
  &quot;0&quot;, &quot;(7) Sunday&quot;,
  &quot;1&quot;, &quot;(1) Monday&quot;,
  &quot;2&quot;, &quot;(2) Tuesday&quot;,
  &quot;3&quot;, &quot;(3) Wednesday&quot;,
  &quot;4&quot;, &quot;(4) Thursday&quot;,
  &quot;5&quot;, &quot;(5) Friday&quot;,
  &quot;6&quot;, &quot;(6) Saturday&quot;,
&quot;&quot;)
/*NEED TO CHANGE TODAY() TO CreatedDate */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Type__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Playbook_Step_Day__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Playbook Step Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Time_of_Day__c</fullName>
        <description>The time of day the activity happened. This value is set to PST.</description>
        <formula>CASE (TEXT(VALUE(MID(TEXT(CreatedDate),12,2))-7),/*change the -7 to your local time, currently this is set to PST*/
&quot;0&quot;, &quot;Midnight - 1am&quot;,
&quot;1&quot;, &quot;01am - 02am&quot;,
&quot;2&quot;, &quot;02am - 03am&quot;,
&quot;3&quot;, &quot;03am - 04am&quot;,
&quot;4&quot;, &quot;04am - 05am&quot;,
&quot;5&quot;, &quot;05am - 06am&quot;,
&quot;6&quot;, &quot;06am - 07am&quot;,
&quot;7&quot;, &quot;07am - 08am&quot;,
&quot;8&quot;, &quot;08am - 09am&quot;,
&quot;9&quot;, &quot;09am - 10am&quot;,
&quot;10&quot;, &quot;10am - 11am&quot;,
&quot;11&quot;, &quot;11am - 12pm&quot;,
&quot;12&quot;, &quot;12pm - 1pm&quot;,
&quot;13&quot;, &quot;1pm - 2pm&quot;,
&quot;14&quot;, &quot;2pm - 3pm&quot;,
&quot;15&quot;, &quot;3pm - 4pm&quot;,
&quot;16&quot;, &quot;4pm - 5pm&quot;,
&quot;17&quot;, &quot;5pm - 6pm&quot;,
&quot;18&quot;, &quot;6pm - 7pm&quot;,
&quot;19&quot;, &quot;7pm - 8pm&quot;,
&quot;20&quot;, &quot;8pm - 9pm&quot;,
&quot;21&quot;, &quot;9pm - 10pm&quot;,
&quot;22&quot;, &quot;10pm - 11pm&quot;,
&quot;23&quot;, &quot;11pm - Midnight&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is set to PST.</inlineHelpText>
        <label>Time of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_SLX_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SLX ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dependent_on_start_date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in process to update tasks on TE start date change</description>
        <label>dependent on start date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ext__c</fullName>
        <label>Ext.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>